force-app/main/default/objects/Bulky_Collection_Slot__c/Bulky_Collection_Slot__c.object-meta.xml
<CustomObject>
    <description>Holds the dates of the bulky collections</description>
    <label>Bulky Collection Slot</label>
    <nameField>
        <label>Bulky Collection Slot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bulky Collection Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>