force-app/main/default/objects/Bulky_Collection_Slot__c/fields/Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Collection_Date__c</fullName>
    <description>Holds the day of the bulky collection</description>
    <label>Collection Date</label>
    <type>Date</type>
</CustomField>