force-app/main/default/objects/Bulky_Collection_Slot__c/fields/Generate_Report__c.field-meta.xml
<CustomField>
    <fullName>Generate_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Report</label>
    <type>Checkbox</type>
</CustomField>