force-app/main/default/objects/Bulky_Collection_Slot__c/fields/In_Past__c.field-meta.xml
<CustomField>
    <fullName>In_Past__c</fullName>
    <formula>TODAY() &gt;  Collection_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Past</label>
    <type>Checkbox</type>
</CustomField>