force-app/main/default/objects/Bulky_Collection_Slot__c/fields/Maximum_Assisted_Collections__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Assisted_Collections__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Maximum Assisted Collections</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>