force-app/main/default/objects/Bulky_Collection_Slot__c/fields/Maximum_Normal_Collections__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Normal_Collections__c</fullName>
    <defaultValue>28</defaultValue>
    <label>Maximum Normal Collections</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>