force-app/main/default/objects/Bulky_Collection_Slot__c/fields/Number_of_Filled_Slots__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Filled_Slots__c</fullName>
    <description>Shows number of filled slots for this date</description>
    <inlineHelpText>Shows number of filled slots for this date</inlineHelpText>
    <label>Number of Visits</label>
    <summaryForeignKey>Bulky_Collections__c.Bulky_Collection_Slot__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>