force-app/main/default/objects/Bulky_Collection_Slot__c/fields/Number_of_Non_Assisted_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Non_Assisted_Visits__c</fullName>
    <label>Number of Non-Assisted Visits</label>
    <summaryFilterItems>
        <field>Bulky_Collections__c.Assisted_Collection__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Bulky_Collections__c.Bulky_Collection_Slot__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>