force-app/main/default/objects/Bulky_Collection_Slot__c/fields/Total_Number_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Items__c</fullName>
    <label>Total Number of Items</label>
    <summarizedField>Bulky_Collections__c.Number_of_Items__c</summarizedField>
    <summaryForeignKey>Bulky_Collections__c.Bulky_Collection_Slot__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>