force-app/main/default/objects/Bulky_Collection_Slot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Collection_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>